# simplet

./: .gitignore  CMakeLists.txt  README.md
components/simplet/: CMakeLists.txt  simplet.c
components/simplet/include/: simplet.h  stunt_dict.h
components/simplet/test/: CMakeLists.txt  test_hello_world.c  test_hello_world_main.c  test_stunt_dict.c  test_stunt_dict_main.c
simplet/: README.md  idf_component.yml  simplet.c
simplet-docs/: mkdocs.yml
simplet-docs/mkdocs/: index.md
simplet-tests/: test_hello_world.c  test_hello_world_main.c  test_simplet_dictionary.c  test_simplet_dictionary_main.c
simplet/include/: simplet.h  simplet_dictionary.h
simplet/test/: benchmark_simplet.c  test_hello_world.c  test_simplet_dictionary.c  test_simplet_dictionary_main.c  test_simplet_runner.c
src/: simplet.c
src/include/: simplet.h  simplet_dictionary.h
